Split main.css in several stylesheets to improve readability and maintainability, fix some css bugs

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,6 +1,8 @@
 .container
 {
     background-color: #c9c9c9;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #header
@@ -30,136 +32,4 @@
 #connection-informations fieldset, #connection-informations input
 {
     margin: 10px 10px 10px 10px;
-}
-
-#channels, #users
-{
-    height: 500px;
-}
-
-#channels, #users
-{
-    background-color: #ffffff;
-    margin-left: 10px;
-    resize: none;
-    overflow: auto;
-    overflow-x: visible;
-}
-
-#chat div
-{
-    height: 470px;
-    background-color: #ffffff;
-    resize: none;
-    overflow: auto;
-    overflow-x: visible;
-}
-
-#prompt
-{
-    margin-left: 10px;
-}
-
-#prompt button
-{
-    margin-left: 8px;
-    margin-top: 9px;
-}
-
-#chat div, #users
-{
-    display: none;
-}
-
-#chat .active
-{
-    display: block;
-}
-
-#chat div .msg
-{
-    display: block;
-}
-
-#chat div .msg .nick
-{
-    font-weight: bold;
-}
-
-#chat .current-title
-{
-    height: 30px;
-    display: block;
-    background-color: #fff8dc;
-    text-align: center;
-}
-
-#chat .current-title span
-{
-    font-weight: bold;
-}
-
-#chat .current-title img
-{
-    width: 15px;
-    height: 15px;
-    padding-top: 5px;
-    padding-right: 5px;
-    float: right;
-}
-
-#chat div .nick.current-user
-{
-    color: #ff0000;
-}
-
-#chat div .nick-server
-{
-    color: #228b22;
-    font-weight: bold;
-}
-
-#chat div .nick-command
-{
-    color: #191970;
-    font-weight: bold;
-}
-
-#channels a, #users .list *
-{
-    display: block;
-    text-decoration: none;
-}
-
-#channels a
-{
-    text-align: center;
-    padding: 5px;
-    color: #000000;
-}
-
-#users .list *
-{
-    text-align: right;
-    padding-right: 5px;
-}
-
-#channels a:hover
-{
-    background-color: #ffa500;
-    color: #ffffff;
-    font-weight: bold;
-}
-
-#users .list a:hover
-{
-    color: #ee9a00;
-    font-weight: bold;
-}
-
-#channels a.active
-{
-    background-color: #7ccd7c;
-    color: #000000;
-    font-weight: bold;
 }
